<resources>
    <string name="app_name">IndoorNavi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="open_navigation">Open Navigation</string>
    <string name="open_sensors">Open Sensors</string>
    <string name="title_activity_fingerprinting">FingerprintingActivity</string>
    <string name="open_fingerprinting">Open Fingerprinting</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="save_fingerprints">Save Fingerprints</string>
    <string name="open_particle">Open Particle Test</string>
    <string name="title_activity_barometer_sensor">BarometerSensorActivity</string>
    <string name="open_baro">Open Baro Test</string>
    <string name="title_activity_step_test">StepTestActivity</string>
    <string name="open_motion">Open Motion Test</string>
    <string name="start_calibrate">Start Step Calibration</string>
    <string name="test_calibrate">Test Calibration</string>
    <string name="stop_calibrate">Stop Calibration</string>
    <string name="title_activity_location_test">LocationTestActivity</string>
    <string name="open_loc">Test Location</string>
    <string name="title_activity_step_sensor">StepSensorActivity</string>
    <string name="open_step">Open Step Sensor</string>
    <string name="title_activity_nav_test">NavTestActivity</string>
    <string name="open_navtest">Open Nav Testing</string>
</resources>
