<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="luh.uni.hannover.hci.indoornavi.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/open_sensors"
        android:orderInCategory="100"
        android:title="@string/open_sensors"
        app:showAsAction="never" />

    <item
        android:id="@+id/open_fingerprinting"
        android:orderInCategory="100"
        android:title="@string/open_fingerprinting"
        app:showAsAction="never" />

    <item
        android:id="@+id/open_navigation"
        android:orderInCategory="100"
        android:title="@string/open_navigation"
        app:showAsAction="never" />

    <item
        android:id="@+id/open_particle"
        android:orderInCategory="100"
        android:title="@string/open_particle"
        app:showAsAction="never" />

    <item
        android:id="@+id/open_baro"
        android:orderInCategory="100"
        android:title="@string/open_baro"
        app:showAsAction="never" />

    <item
        android:id="@+id/open_motion"
        android:orderInCategory="100"
        android:title="@string/open_motion"
        app:showAsAction="never" />
</menu>
